| Bug #7241 | Invalid response when DELETE .. USING and LOCK TABLES used. | ||
|---|---|---|---|
| Submitted: | 13 Dec 2004 17:51 | Modified: | 24 May 2005 14:22 |
| Reporter: | Scott Lane | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: MyISAM storage engine | Severity: | S2 (Serious) |
| Version: | 4.1.2 | OS: | Windows (Windows XP) |
| Assigned to: | Antony Curtis | CPU Architecture: | Any |
[13 Dec 2004 17:51]
Scott Lane
[13 Dec 2004 18:31]
MySQL Verification Team
Verified against 4.1.8 Bk Source Linux.
[10 Mar 2005 22:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/22917
[27 Apr 2005 9:04]
Antony Curtis
Refreshing patch
[23 May 2005 0:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/25167
[24 May 2005 10:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/25206
[24 May 2005 14:22]
Antony Curtis
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Pushed to 4.1.13 repo
