Bug#7241 - Invalid response when DELETE .. USING and LOCK TABLES used.   Only acquire necessary write lock for multi-delete