sql/sql_parse.cc
@@ -4141,6 +4141,7 @@ void mysql_init_multi_delete(LEX *lex)
   lex->select_lex.select_limit= lex->unit.select_limit_cnt=
     HA_POS_ERROR;
   lex->select_lex.table_list.save_and_clear(&lex->auxilliary_table_list);
+  lex->lock_option= using_update_log ? TL_READ_NO_INSERT : TL_READ;
 }
 
 
@@ -5437,6 +5438,11 @@ int multi_delete_precheck(THD *thd, TABLE_LIST *tables, uint *table_count)
     }
     walk->lock_type= target_tbl->lock_type;
     target_tbl->table_list= walk;	// Remember corresponding table
+    if (walk->table_list)
+    {
+      target_tbl->table_list= walk->table_list;
+      walk->table_list->lock_type= walk->lock_type;
+    }
   }
   DBUG_RETURN(0);
 }
